[metadata]
name = alb-rules-tool
version = 0.1.0
description = AWS ALB Rules backup and restore tool
author = AWS Administrator
author_email = your-email@example.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: System :: Systems Administration
    
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    alb-rules = alb_rules_tool.cli:cli

[options.extras_require]
test =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    moto>=4.0.0
dev =
    mypy>=0.942
    black>=22.1.0
    flake8>=4.0.1

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True

[mypy.plugins.numpy.*]
follow_imports = skip

[mypy-setuptools.*]
ignore_missing_imports = True

[mypy-moto.*]
ignore_missing_imports = True

[mypy-pytest.*]
ignore_missing_imports = True

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test
python_functions = test_*
